kustomize/phoenix/base/phoenix.yaml
apiVersion: v1
kind: Service
metadata:
    name: phoenix
spec:
    type: ClusterIP
    selector:
        app: phoenix
    ports:
        - name: http
          port: 6006
          targetPort: 6006
          protocol: TCP
        - name: metrics
          port: 9090
          targetPort: 9090
          protocol: TCP
        - name: grpc
          port: 4317
          targetPort: 4317
          protocol: TCP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: phoenix
spec:
    replicas: 1
    revisionHistoryLimit: 3
    selector:
        matchLabels:
            app: phoenix
    template:
        metadata:
            annotations:
                prometheus.io/path: /metrics
                prometheus.io/port: "9090"
                prometheus.io/scrape: "true"
            labels:
                app: phoenix
        spec:
            containers:
                - args:
                      - -m
                      - phoenix.server.main
                      - serve
                  command:
                      - python
                  image: index.docker.io/arizephoenix/phoenix:version-12.18.0
                  imagePullPolicy: IfNotPresent
                  name: phoenix
                  ports:
                      - containerPort: 6006
                      - containerPort: 9090
                      - containerPort: 4317
                  readinessProbe:
                      httpGet:
                          port: 6006 # readiness probe on root of application port to guarantee app is really serving before becoming ready in kubernetes
